--- a/Final Year Project/style.css
+++ b/Final Year Project/style.css
@@ -1,6 +1,6 @@
 /**
-	This is Blockly's CSS file
-	Lines 11,33 and 145 were modified to provide a better visual display
+This is Blockly's CSS file
+Lines 11, 33 and 145 were modified to provide a better visual display
 **/
 
 html, body {
